<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- App name -->
    <string name="app_name" translatable="false">Booklet</string>

    <!-- Activities -->
    <string name="title_activity_add_book">Add Book</string>
    <string name="title_activity_book_details">Book Details</string>

    <!-- Menu Items -->
    <string name="action_about">About</string>
    <string name="action_share">Share</string>
    <string name="action_delete">Delete Book</string>

    <!-- Actions -->
    <string name="action_scan_book">Scan Book</string>
    <string name="action_enter_isbn">Enter ISBN</string>
    <string name="action_confirm">Search</string>

    <!-- Dialog fragment button text -->
    <string name="dialog_positive_button_text">OK</string>
    <string name="progress_dialog_title">Please wait</string>
    <string name="progress_dialog_content">Loading</string>

    <!-- Content descriptions -->
    <string name="isbn_description">Insert ISBN</string>
    <string name="book_cover_description">Book cover</string>

    <!-- Instructions -->
    <string name="instructions_enter_isbn">
        Enter book\'s ISBN number. You can find this number on the book cover or online.
        It is usually 10 or 13 digits long.
    </string>
    <string name="no_books_in_database">
        Your library is empty. Add your favorite books by scanning or entering their ISBN numbers.
        Give it a try!
    </string>

    <!-- Info -->
    <string name="book_already_in_library">Book is already in your library.</string>
    <string name="book_not_found">Book not found. Is this book brand new?</string>
    <string name="unknown_book_category">Unknown genre</string>

    <!-- Errors -->
    <string name="error_invalid_isbn_number">Invalid ISBN number. Must be 10 or 13 characters long.</string>
    <string name="error_no_connection">Check your internet connection</string>

    <!-- Sharing -->
    <string name="share_text">Check this book out: </string>

    <!-- About application -->
    <string name="about_text">This application gets book information from a Google API. All titles,
        cover images, and author information come from there. The original version of this app was
        built by Sascha Jaschke, and a modified version is given to students in the Udacity Android
        Nanodegree program.</string>

</resources>
