<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/material_padding"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:lineSpacingExtra="4dp"
                android:text="@string/instructions_enter_isbn"
                android:textSize="16sp"/>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/isbn_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                        android:id="@+id/isbn_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/isbn_description"
                        android:gravity="center"
                        android:inputType="number"
                        android:drawableRight="@drawable/ic_clear"
                        android:drawableEnd="@drawable/ic_clear"/>
        </android.support.design.widget.TextInputLayout>

        <Button
                android:id="@+id/confirm_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/action_confirm" />
</LinearLayout>
