<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:fab="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <include
            android:id="@+id/toolbar"
            layout="@layout/include_toolbar"/>

    <GridView
            android:id="@+id/booksGrid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/grid_padding"
            android:verticalSpacing="@dimen/grid_spacing"
            android:horizontalSpacing="@dimen/grid_spacing"
            android:layout_below="@id/toolbar"
            android:numColumns="2"
            android:clipToPadding="false"
            tools:visibility="gone"/>

    <TextView
            android:id="@+id/noBooksFoundMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="40dp"
            android:text="@string/no_books_in_database"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_centerInParent="true"/>

    <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            fab:menu_colorNormal="@color/color_accent"
            fab:menu_colorPressed="@color/color_fab_pressed"
            app:menu_icon="@drawable/ic_add">

        <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fab_scan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_scan_barcode"
                app:fab_colorNormal="@color/white"
                app:fab_colorPressed="@color/white"
                app:fab_label="@string/action_scan_book"/>

        <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fab_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_text"
                app:fab_colorNormal="@color/white"
                app:fab_colorPressed="@color/white"
                app:fab_label="@string/action_enter_isbn"/>
    </com.github.clans.fab.FloatingActionMenu>
</RelativeLayout>